5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1834_1278.log
== TEST (2019-06-27 16:25:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA=int(input("city A: "))
cityB=int(input("city B: "))
cityA=(cityA%10)-1
cityB=(cityB%10)-1

x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z,w]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:26:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z,w]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:27:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(((input("z:"))//100 ) - 1)
w = int(input((("w:"))//100) - 1)
while( w != -1):
	x = distancia([z,w]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:27:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(((input("z:"))//100 ) - 1)
w = int(input((("w:"))//100) - 1)
while( w != -1):
	x = distancia([z,w]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = (int((input("z:"))//100 )) - 1
w = (int(input(("w:"))//100)) - 1
while( w != -1):
	x = distancia([z,w]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:30:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = (int(input("z:"))
w = (int(input(("w:"))
while( w != -1):
	x = distancia([z//100] , [w//100] + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
File "XXXX", line 17
    w = (int(input(("w:"))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = (int(input("z:"))
w = (int(input("w:"))
while( w != -1):
	x = distancia([z//100] , [w//100] + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
File "XXXX", line 17
    w = (int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z//100] , [w//100] + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
File "XXXX", line 20
    z = w 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:31:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z//100] , [w//100]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:33:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z//100] , [w//100]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:34:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z//100],[w//100]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:35:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = (distancia[z//100],[w//100]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:37:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z//100],[w//100]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:37:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([z//100],[w//100]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:38:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia([(z//100) - 1, (w//100) - 1]) + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:39:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia[(z//100) - 1, (w//100) - 1] + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:39:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

distancia =array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])



x = 0 
z = int(input("z:"))
w = int(input("w:"))
while( w != -1):
	x = distancia[(z//100) - 1, (w//100) - 1] + x
	z = w 
	w = int(input("w:"))
print(x)	

	
	
-- EXECUTION TIME:
1.13948
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
